# regula-test

./: .gitignore  CMakeFile  CMakeLists.txt  README.md
build-linux/: conf.sh
src/: dllmain.cpp  main.cpp  main_ut.cpp
